test/corpus/syntax.txt
===============================================================================
Simple output
===============================================================================
$ cmd
output 1
output 2

-------------------------------------------------------------------------------

(source
  (fish_source (marker) (code))
  (output))

===============================================================================
Multiline cmd
===============================================================================
$ cmd\
  -l
output

-------------------------------------------------------------------------------

(source
  (fish_source (marker) (code))
  (output))

